Development version
===================
- Added RequestHandler.abort(), a wrapper to abort().

- Added get_valid_methods(), to return the HTTP methods a handler can handle.
  This is used when raising MethodNotAllowed, which now correctly lists the
  allowed methods as required by HTTP 1.1 spec.

- Added Tipfy.get_url_adapter(), that returns a bound URL map, to make it
  easier to override the bound server_name or subdomain.

- Exceptions caused when loading a badly configured middleware class are now
  caught and a warning is emitted.

- Minor change: ALLOWED_METHODS are now listed in upper case.


Version 0.6 - July 25, 2010
===========================
- Handler definitions in URL rules can now also be a RequestHandler class,
  instead of a string.

- Added support for single-file apps, much like we see in webapp. Tipfy can
  now be instantiated passing a list of URL rules, so apps can be entirely
  defined in a single file mapped in app.yaml, without the need for a separate
  urls.py::

      import sys
      sys.path.insert(0, 'distlib')

      from tipfy import RequestHandler, Rule, make_wsgi_app, run_wsgi_app

      class HelloWorldHandler(RequestHandler):
          def get(self, **kwargs):
              return 'Hello, World!'

      class ByeWorldHandler(RequestHandler):
          def get(self, **kwargs):
              return 'Bye, World!'

      app = make_wsgi_app(rules=[
          Rule('/', endpoint='hello', handler=HelloWorldHandler),
          Rule('/bye', endpoint='bye', handler=ByeWorldHandler),
      ])

      def main():
          run_wsgi_app(app)

      if __name__ == '__main__':
          main()

  This also helps to test handlers defined in a test file::

      import unittest

      from tipfy import RequestHandler, Rule, Tipfy, redirect

      class TestHandler(unittest.TestCase):
          def test_redirect(self):
              class Handler1(RequestHandler):
                  def get(self, **kwargs):